:sparkles: Add patients and samples.go
