# cmd/radiant-case-api/main.go
@@ -33,6 +33,10 @@ func main() {
 		v1.POST("/cases/batch", handlers.CreateCasesBatch)
 		v1.PATCH("/cases/:id", handlers.UpdateCase)
 		v1.GET("/cases/batch/:id", handlers.GetCasesBatch)
+		v1.POST("/patients/batch", handlers.CreatePatientsBatch)
+		v1.GET("/patients/batch/:id", handlers.GetPatientsBatch)
+		v1.POST("/samples/batch", handlers.CreateSamplesBatch)
+		v1.GET("/samples/batch/:id", handlers.GetSamplesBatch)
 	}
 
 	r.Run(":8080")
